# SnapRedesign

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt  ui_state.json  workflow_api.json
src/: README.md
src/snapredesign/: README.md  bootstrap.py  comfy_client.py  history_gallery.py  instance_lock.py  main.py  openai_prompt.py  snip_overlay.py  style_state.py  style_ui.py  theme.py  tray_app.py  viewer.py
src/snapredesign/app/: README.md  shell.py
src/snapredesign/consistency/: README.md  controlnet.py  controls.py
src/snapredesign/core/: README.md  config.py  types.py
src/snapredesign/integrations/: README.md
src/snapredesign/integrations/a1111/: README.md  client.py
src/snapredesign/orchestration/: README.md  job_queue.py  redesign_pipeline.py
src/snapredesign/prompts/: README.md  presets.py  templates.py
src/snapredesign/storage/: README.md  gallery.py
src/snapredesign/testing/: README.md  evaluator.py
src/snapredesign/ui/: README.md  hotkey.py  results_popup.py  snipper.py  tray.py
