[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snapredesign"
version = "0.1.0"
description = "SnapRedesign skeleton architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
snapredesign = "snapredesign.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
